add changes in single platform app